--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -107,12 +107,13 @@ svg {
 
 .line {
   width: 0.1rem;
-  height: 4.5rem;
+  height: 6rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50);
   background-color: #ffffff;
   z-index: 1;
+  opacity: 0.5;
   &.top {
     top: 0;
   }
