--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -1,12 +1,13 @@
 @use "../config/" as *;
 @use "sass:color" as *;
 .btn {
-  padding: var(--space-2) var(--space-6);
+  padding: var(--space-2) 3.4rem;
   border-radius: var(--btn-radius, 50vmax);
   background-color: #fff;
   color: var(--secondary);
   transition: all linear 0.4s;
   font-size: 1.4rem;
+  font-weight: 450;
   display: flex;
   gap: 0.5rem;
   align-items: center;
