--- a/src/assets/scss/layout/_faq.scss
+++ b/src/assets/scss/layout/_faq.scss
@@ -29,6 +29,7 @@
       cursor: pointer;
       font-size: 1.4rem;
       display: flex;
+      font-weight: 500;
       justify-content: space-between;
     }
 
@@ -56,6 +57,8 @@
       &-logo {
         width: 45%;
         flex-shrink: 0;
+        display: flex;
+        align-items: center;
         .fill-logo {
           margin-inline: auto;
           max-width: 25rem;
@@ -66,7 +69,7 @@
       }
       &-wrapper {
         display: flex;
-        align-items: center;
+        min-height: 45rem;
       }
     }
   }
