--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -22,7 +22,6 @@ header {
   display: flex;
   z-index: 10;
   justify-content: space-between;
-
   .logo {
     width: 4.5rem;
   }
@@ -90,7 +89,7 @@ header {
       display: flex;
       gap: 0.5rem;
       width: max-content;
-      padding-inline: 3rem;
+      padding-inline: 0.5rem;
     }
     .icon {
       rotate: 180deg;
@@ -112,12 +111,15 @@ header {
     }
     .submenu-item {
       padding: 0.5rem;
-      text-align: center;
+      line-height: 1;
     }
   }
   .navlink-active {
     background: white;
     border-radius: 0.3rem;
+    button {
+      font-weight: 500;
+    }
     > * {
       color: #292d32;
     }
@@ -144,21 +146,33 @@ header {
 
     .navlink-item {
       width: calc(50% - 0.8rem);
-      background: linear-gradient(
-        321.8deg,
-        rgba(255, 255, 255, 0.2) 0%,
-        rgba(255, 255, 255, 0.2) 96.65%
-      );
+      background: rgba(255, 255, 255, 0.2);
       transition: 500ms ease-in-out;
       border-radius: 1.35rem;
       padding: 2.6rem 1.4rem 1.5rem;
       position: relative;
-      &:hover {
+      isolation: isolate;
+      &::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        border-radius: 1.35rem;
+        z-index: -1;
         background: linear-gradient(
           321.8deg,
           rgba(210, 210, 210, 0.238) 0%,
           rgba(255, 255, 255, 0.7) 96.65%
         );
+        border: 0.1rem solid transparent;
+        border-color: white;
+        opacity: 0;
+        transition: 500ms ease-in-out;
+      }
+      &:hover {
+        background: transparent;
+        &::before {
+          opacity: 1;
+        }
       }
       .coming-soon {
         position: absolute;
@@ -230,8 +244,9 @@ header {
   }
   .get-in-touch {
     .btn {
-      background-color: black;
-      color: #ecc243;
+      background-color: transparent;
+      color: #292d32;
+      border: 0.1rem solid #292d32;
     }
   }
 }
