--- a/src/assets/scss/layout/_ivr.scss
+++ b/src/assets/scss/layout/_ivr.scss
@@ -33,6 +33,9 @@
   .section-title {
     margin-bottom: 0.6rem;
     font-size: 3.6rem;
+    @include mq(lg) {
+      font-size: 5rem;
+    }
   }
 
   .section-sub-title {
@@ -87,6 +90,15 @@
     &-title {
       margin-bottom: 0.6rem;
       line-height: 1.2;
+      h3 {
+        font-weight: 500;
+      }
+    }
+    &-content {
+      p {
+        font-weight: 300;
+        line-height: 1.6rem;
+      }
     }
   }
 }
@@ -119,6 +131,13 @@
         object-position: bottom;
         padding-inline: 2rem;
       }
+      @include mq(lg) {
+        &.svi {
+          .hero-banner {
+            padding-inline: 10rem;
+          }
+        }
+      }
     }
 
     .svs {
@@ -135,7 +154,7 @@
     }
     .card-item {
       padding: 3.5rem;
-      width: calc(33.33% - 4rem);
+      width: calc(33.33% - 2rem);
     }
     .card-icon {
       width: 5.5rem;
@@ -144,7 +163,7 @@
     .card-list {
       max-width: var(--max-width);
       margin-inline: auto;
-      gap: 6rem;
+      gap: 3rem;
     }
   }
 }
