--- a/src/assets/scss/layout/_svs-banner.scss
+++ b/src/assets/scss/layout/_svs-banner.scss
@@ -4,14 +4,26 @@
   color: #292d32;
   position: relative;
   text-align: center;
+  @include mq(md) {
+    margin-top: 9rem;
+  }
   h3 {
     color: #292d32;
     font-size: 4.6rem;
     line-height: 1.3;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
+    @include mq(md) {
+      font-size: 6rem;
+      line-height: 1;
+    }
   }
   p {
     font-size: 1.4rem;
+    line-height: 1.3;
+    @include mq(md) {
+      // font-size: 1.6rem;
+    }
   }
   .content {
     padding-inline: 2rem;
@@ -24,5 +36,16 @@
     bottom: 2rem;
     inset-inline: 0;
     margin-inline: auto;
+  }
+}
+
+.svs-page:not(.svi-page) {
+  .svs-banner {
+    @include mq(md) {
+      picture {
+        margin-top: -9rem;
+        display: block;
+      }
+    }
   }
 }
