--- a/src/assets/scss/layout/_vr-cards.scss
+++ b/src/assets/scss/layout/_vr-cards.scss
@@ -44,21 +44,23 @@
 
   .card {
     padding: 1.9rem 1.6rem;
-    border-radius: 1.5rem;
+    border-radius: 2.5rem;
     margin-bottom: 2rem;
     gap: 2rem;
     display: flex;
     backdrop-filter: blur(2rem);
     flex-direction: column;
     box-shadow: 0px 0px 20px 0px #0000001a;
-
+    &-text {
+      font-weight: 300;
+    }
     &-blue {
       background-color: #19addde5;
     }
 
     &-sub-title {
-      font-size: 1.6rem;
-      font-weight: 800;
+      font-size: 1.8rem;
+      font-weight: 500;
     }
 
     &-black {
@@ -79,6 +81,9 @@
         rgba(236, 194, 67, 0.9) 4.41%,
         rgba(198, 131, 14, 0.9) 92.36%
       );
+    }
+    &-dark-orange {
+      background: #e69306;
     }
 
     &-title {
@@ -125,23 +130,25 @@
 
     @include mq(lg) {
       &-list-svs {
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(10, 1fr);
 
         .card-1 {
-          grid-column: span 2;
+          grid-column: span 5;
         }
 
         .card-2 {
-          grid-column: span 3;
+          grid-column: span 5;
         }
 
-        .card-3,
+        .card-3 {
+          grid-column: span 6;
+        }
         .card-4 {
-          grid-column: span 3;
+          grid-column: span 6;
         }
 
         .card-5 {
-          grid-column: 4 / span 2;
+          grid-column: 7 / span 4;
           grid-row: 2 / span 2;
         }
       }
@@ -172,8 +179,8 @@
 
   .card-1 {
     .icon {
-      width: 4rem;
-      height: 4rem;
+      width: 4.5rem;
+      height: 4.5rem;
       object-fit: contain;
       object-position: center;
       margin-right: 1.2rem;
@@ -185,8 +192,14 @@
       height: 2rem;
       margin-bottom: 0.6rem;
     }
+    .btn {
+      background-color: #f8f8f8;
+    }
     > .card-text {
       max-width: 40rem;
+      font-size: 1.8rem;
+
+      line-height: 2rem;
     }
 
     .card-wrap {
@@ -327,6 +340,7 @@
 
       .card-text {
         font-size: 1.4rem;
+        font-weight: 100;
       }
     }
   }
@@ -371,6 +385,11 @@
 
       .text {
         margin-top: 2rem;
+      }
+    }
+    .content {
+      .text:nth-child(1) {
+        font-weight: 600;
       }
     }
 
@@ -520,12 +539,14 @@
 
     .card-text {
       font-size: 1.4rem;
-      font-weight: 500;
+      font-weight: 600;
       @include mq(md) {
         font-size: 1.8rem;
       }
     }
-
+    & > .card-text {
+      font-weight: 300;
+    }
     .icon-wrap {
       display: flex;
       flex-direction: column;
