--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -120,7 +120,10 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-
+    gap: 2rem;
+    @include mq(md){
+      gap: 0;
+    }
     &::before {
       content: "";
       position: absolute;
