--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -25,6 +25,7 @@
     font-size: 1.4rem;
     display: block;
     margin-bottom: 1.5rem;
+    font-weight: 500;
   }
   &-link-list {
     width: 50%;
