--- a/src/assets/scss/layout/_ivr.scss
+++ b/src/assets/scss/layout/_ivr.scss
@@ -4,27 +4,29 @@
   padding: 3rem 2rem 2rem;
   isolation: isolate;
   position: relative;
-  &::before {
-    content: "";
-    width: 30rem;
-    height: 30rem;
-    border: 0.1rem solid #4c515640;
-    z-index: 1;
-    position: absolute;
-    left: -15rem;
-    top: -15rem;
-    border-radius: 50%;
-  }
-  &::after {
-    content: "";
-    width: 35rem;
-    height: 35rem;
-    border: 0.1rem solid #4c515640;
-    z-index: 1;
-    position: absolute;
-    right: -20rem;
-    top: 10%;
-    border-radius: 50%;
+  @include mq(md) {
+    &::before {
+      content: "";
+      width: 30rem;
+      height: 30rem;
+      border: 0.1rem solid #4c515640;
+      z-index: 1;
+      position: absolute;
+      left: -15rem;
+      top: -15rem;
+      border-radius: 50%;
+    }
+    &::after {
+      content: "";
+      width: 35rem;
+      height: 35rem;
+      border: 0.1rem solid #4c515640;
+      z-index: 1;
+      position: absolute;
+      right: -20rem;
+      top: 10%;
+      border-radius: 50%;
+    }
   }
   &-list {
     margin-bottom: 2rem;
