--- a/src/assets/scss/layout/_product-page.scss
+++ b/src/assets/scss/layout/_product-page.scss
@@ -9,6 +9,7 @@
   position: relative;
   gap: 5%;
   padding-top: 10rem;
+  translate: 0;
   .product-coming {
     text-transform: uppercase;
     letter-spacing: 6px;
@@ -54,10 +55,9 @@
     .cuvee-line {
       border-radius: 50%;
       overflow: hidden;
-      position: absolute;
-      top: calc(100% - 7rem);
+      position: fixed;
       border-radius: 50%;
-      height: 30vh;
+      height: 24%;
       max-width: 180rem;
       margin: auto;
       pointer-events: none;
@@ -65,7 +65,9 @@
       display: flex;
       align-items: flex-start;
       width: calc(100% - 3rem);
+      bottom: -5%;
       @include mq(md) {
+        bottom: unset;
         top: calc(100% - 6rem);
         height: 23vh;
       }
@@ -149,7 +151,13 @@
     margin-bottom: 3.5rem;
   }
 }
-
+.product-page {
+  .feature-section {
+    .line {
+      display: none;
+    }
+  }
+}
 @include mq(md) {
   .product-page-section {
     .hero-content {
