--- a/src/assets/scss/layout/_index.scss
+++ b/src/assets/scss/layout/_index.scss
@@ -11,5 +11,9 @@
 @forward "svs-banner";
 @forward "rotate";
 @forward "about";
+@forward "blog-page";
+@forward "blog-detail-page";
+@forward "blog-card";
+@forward "list-card";
 @forward "footer";
 @forward "modal";
