--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -9,13 +9,13 @@
   margin: auto;
   width: 100%;
 
-  @include mq(md) {
-    padding-left: 15rem;
-  }
+  // @include mq(md) {
+  //   padding-left: 15rem;
+  // }
 
-  @include mq(lg) {
-    padding-left: 10rem;
-  }
+  // @include mq(lg) {
+  //   padding-left: 10rem;
+  // }
 }
 
 .flex {
@@ -108,7 +108,7 @@ svg {
 
 .line {
   width: 0.1rem;
-  height: 6rem;
+  height: 5rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50);
