--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -1,7 +1,7 @@
 @use "../config/" as *;
 @use "sass:color" as *;
 .btn {
-  padding: var(--space-3) 3.4rem;
+  padding: var(--space-2) 3.4rem;
   border-radius: var(--btn-radius, 50vmax);
   background-color: #fff;
   color: var(--secondary);
@@ -13,6 +13,9 @@
   align-items: center;
   text-transform: capitalize;
   width: max-content;
+  @include mq(md) {
+    padding: var(--space-2) 3.4rem;
+  }
   svg,
   path {
     transition: 0.4s;
