--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -3,12 +3,29 @@
 .home-page,
 .svs-page {
   .explore-tray {
-    background: linear-gradient(
-        151.22deg,
+    backdrop-filter: blur(2rem);
+    background: linear-gradient(151.22deg,
         rgba(236, 194, 67, 0.5) 9.45%,
-        rgba(255, 255, 255, 0.1) 94.83%
-      ),
+        rgba(255, 255, 255, 0.1) 94.83%),
       linear-gradient(0deg, rgba(236, 194, 67, 0.4), rgba(236, 194, 67, 0.4));
+  }
+}
+
+.blogs-page,.blogs-detail-page {
+  header {
+    .menu-title,
+    .hamburger {
+      filter: invert(1);
+    }
+
+    .logo {
+      filter: unset;
+      display: none;
+    }
+
+    .logo-2 {
+      display: block;
+    }
   }
 }
 
@@ -22,12 +39,21 @@ header {
   display: flex;
   z-index: 10;
   justify-content: space-between;
+
+  .overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 1;
+  }
+
   .logo {
     width: 4.5rem;
   }
+
   .logo-2 {
     display: none;
   }
+
   .secondary-navbar {
     display: none;
   }
@@ -39,9 +65,11 @@ header {
     font-size: 1.8rem;
     transition: 500ms;
     cursor: pointer;
+
     &:hover {
       filter: invert(1);
     }
+
     &-icon {
       width: 3rem;
       height: 3rem;
@@ -55,13 +83,15 @@ header {
     max-width: 30rem;
     top: 4rem;
     left: -100%;
-
+    z-index: 2;
     padding: 2rem 4.7rem 4rem;
     backdrop-filter: blur(2rem);
     border-radius: 0 1.3rem 1.3rem 0;
     transition: 400ms ease-in-out;
     max-height: 100vh;
     overflow: auto;
+    border: 0.1rem solid #ffffff7a;
+
     &.navbar-active {
       display: block;
       left: 0;
@@ -71,19 +101,24 @@ header {
       margin-top: 2.5rem;
     }
   }
+
   .navlink-item {
     width: max-content;
     flex-shrink: 0;
+
     button.demo {
       transition: 300ms ease-in-out;
+
       &:hover {
         color: var(--secondary);
       }
     }
   }
+
   .navlink-submenu {
     position: relative;
-    > button {
+
+    >button {
       height: 2rem;
       align-items: center;
       display: flex;
@@ -91,6 +126,7 @@ header {
       width: max-content;
       padding-inline: 0.5rem;
     }
+
     .icon {
       rotate: 180deg;
       transition: 300ms;
@@ -100,43 +136,55 @@ header {
       justify-content: center;
       align-items: center;
     }
+
     .submenu-list {
       background: white;
       position: absolute;
       top: 100%;
       width: 100%;
+      border-radius: 0 0 0.5rem 0.5rem;
+
       * {
         color: #292d32;
       }
     }
+
     .submenu-item {
       padding: 0.5rem;
       line-height: 1;
     }
   }
+
   .navlink-active {
     background: white;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem 0.5rem 0 0;
+
     button {
       font-weight: 500;
     }
-    > * {
+
+    >* {
       color: #292d32;
     }
+
     .icon {
       rotate: unset;
     }
+
     .submenu-list {
       display: block;
     }
   }
+
   .btn-dropdown {
     width: max-content;
     display: flex;
   }
+
   .submenu-list {
     display: none;
   }
+
   .product-list {
     list-style: none;
     display: flex;
@@ -152,28 +200,30 @@ header {
       padding: 2.6rem 1.4rem 1.5rem;
       position: relative;
       isolation: isolate;
+
       &::before {
         content: "";
         position: absolute;
         inset: 0;
         border-radius: 1.35rem;
         z-index: -1;
-        background: linear-gradient(
-          321.8deg,
-          rgba(210, 210, 210, 0.238) 0%,
-          rgba(255, 255, 255, 0.7) 96.65%
-        );
+        background: linear-gradient(321.8deg,
+            rgba(210, 210, 210, 0.238) 0%,
+            rgba(255, 255, 255, 0.7) 96.65%);
         border: 0.1rem solid transparent;
         border-color: white;
         opacity: 0;
         transition: 500ms ease-in-out;
       }
+
       &:hover {
         background: transparent;
+
         &::before {
           opacity: 1;
         }
       }
+
       .coming-soon {
         position: absolute;
         bottom: 0;
@@ -219,6 +269,7 @@ header {
     // }
   }
 }
+
 .svs-page header {
   .hamburger {
     filter: invert(1);
@@ -228,20 +279,24 @@ header {
     filter: unset;
     display: none;
   }
+
   .logo-2 {
     display: block;
   }
+
   .secondary-navbar {
     .demo {
       color: black;
       display: none;
     }
+
     .navlink-item:not(.navlink-active) {
       button {
         filter: invert(1);
       }
     }
   }
+
   .get-in-touch {
     .btn {
       background-color: transparent;
@@ -250,10 +305,12 @@ header {
     }
   }
 }
+
 @include mq(md) {
   header {
     padding-top: 3.2rem;
     padding-inline: 4rem;
+
     .product-list .navlink-item .coming-soon {
       font-size: 1rem;
       width: max-content;
@@ -308,14 +365,18 @@ header {
     .explore-tray {
       max-width: 46rem;
       top: 3rem;
+
       .product-list {
         gap: 2.5rem;
+
         a {
           font-size: 1.4rem;
         }
+
         .navlink-item {
           width: calc(33.33% - 1.7rem);
         }
+
         .icon {
           width: 4.5rem;
           height: 4.5rem;
