--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -126,6 +126,23 @@ svg {
     background-color: #292d32;
   }
 }
+
+.tag {
+  border-radius: 50vmax;
+  background-color: #eeeeee;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.3rem 0.5rem;
+  min-width: 6.5rem;
+  text-align: center;
+  margin-right: 1rem;
+  width: max-content;
+  &-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+  }
+}
 @include mq(lg) {
   .section-sub-title {
     font-size: 1.8rem;
