--- a/src/assets/scss/layout/_blog-page.scss
+++ b/src/assets/scss/layout/_blog-page.scss
@@ -1,54 +1,129 @@
 @use "../config/" as *;
 
+.infinite-scroll-component__outerdiv {
+  width: 100%;
+}
+
 .blog-section {
-  padding-top: 10rem;
+  padding-top: 13rem;
   padding-inline: 2.5rem;
+
+  .dropdown {
+    width: max-content;
+    margin: 3rem auto 0;
+    padding: 1rem 2rem;
+    border-radius: 2.5rem 2.5rem 0 0;
+    z-index: 1;
+    position: relative;
+    color: #292d32;
+    @include mq(md) {
+      margin-left: auto;
+      margin-right: unset;
+    }
+    &-btn {
+      background-color: transparent;
+      border-radius: 2rem;
+      filter: invert(1);
+    }
+
+    &-item-btn {
+      width: 100%;
+      color: #292d32;
+      text-align: left;
+      height: 100%;
+    }
+
+    &-list {
+      background-color: #ffffffb3;
+      padding: 2rem 3rem;
+      position: absolute;
+      width: 100%;
+      display: none;
+      flex-direction: column;
+      height: max-content;
+      gap: 1rem;
+      top: 100%;
+      left: 0;
+      margin-inline: auto;
+      backdrop-filter: blur(2rem);
+      border-radius: 0 0 2rem 2rem;
+      max-height: 300px;
+      overflow: auto;
+    }
+    &-active {
+      background-color: #ffffffb3;
+      .dropdown-list {
+        display: flex;
+      }
+      .dropdown-btn {
+        filter: unset;
+      }
+    }
+
+    .dropdown-btn {
+      display: flex;
+      align-items: center;
+      gap: 1.3rem;
+      color: #292d32;
+
+      img {
+        filter: invert(1);
+      }
+    }
+
+    .dropdown-icon {
+      width: 2.4rem;
+    }
+  }
 
   .blog-list-head {
     padding: 2rem;
     position: relative;
-    background: linear-gradient(139.6deg, #373A3A 4.41%, #191B1B 96.51%);
+    background: linear-gradient(139.6deg, #373a3a 4.41%, #191b1b 96.51%);
     margin-inline: -2.5rem;
     padding: 2.5rem;
     padding-top: 7rem;
     margin-top: -4rem;
+
     @include mq(lg) {
-      margin-inline: calc(-1 * (100vw - var(--container))/2);
-      padding: 5.4rem calc((100vw - var(--container))/2) 4.8rem;
+      margin-inline: calc(-1 * (100vw - var(--container)) / 2);
+      padding: 5.4rem calc((100vw - var(--container)) / 2) 4.8rem;
       display: flex;
       gap: 3rem;
       align-items: center;
       margin-top: unset;
-    
     }
-   
 
     .blog-list-title {
       color: #ffffff;
       font-size: 1.8rem;
       text-align: center;
       margin-bottom: 2rem;
+
       @include mq(lg) {
         margin: unset;
       }
     }
-    .input-wrap{
+
+    .input-wrap {
       display: flex;
       border-radius: 50vmax;
       overflow: hidden;
-      border: 1px solid #9D9D9D;
+      border: 1px solid #9d9d9d;
       padding-inline: 1rem;
- 
+
       gap: 1rem;
+
       @include mq(lg) {
         width: 25%;
       }
-
     }
-    .search-icon{
+
+    .search-icon {
       width: 2.4rem;
     }
-    .search-input{
+
+    .search-input {
       background-color: transparent;
       outline: unset;
       border: unset;
@@ -63,6 +138,10 @@
     position: absolute;
     top: 10rem;
     left: 4rem;
+
+    img {
+      width: 4rem;
+    }
 
     a {
       display: flex;
@@ -96,7 +175,6 @@
 
     @include mq(lg) {
       margin-bottom: unset;
-
     }
 
     svg {
@@ -106,39 +184,46 @@
 
     &:hover {
       svg path {
-        stroke: #ffffff
+        stroke: #ffffff;
       }
-
     }
   }
 
-  .blog-list-wrap{
+  .blog-list-wrap .loading,
+  .blog-list-loaded {
     padding-block: 3rem;
     gap: 1.6rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
     @include mq(md) {
       gap: 2.2rem;
-    
     }
-  }
-  .blog-list{
-    .card{
-      width: 100%;
-      flex-shrink: 0;
-      @include mq(md) {
-       width: calc(50% - 1.1rem);
-      }
-      @include mq(lg) {
-        width: calc(33.33% - 1.6rem);
-      }
-    }
-  }
-  .banner-section{
-    margin-inline: -2.5rem;
   }
 
+  .blog-list {
+    &-wrap .loading,
+    .blog-list-loaded {
+      @include mq(md) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include mq(xl) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    .card {
+      width: 100%;
+      flex-shrink: 0;
+    }
+  }
+
+  .banner-section {
+    margin-inline: -2.5rem;
+  }
 }
 
 @include mq(md) {
@@ -154,22 +239,70 @@
       align-items: flex-end;
       gap: 10%;
     }
-    .head-wrap{
+
+    .head-wrap {
       padding-bottom: 3.7rem;
     }
-    .latest-blog{
+
+    .latest-blog {
       margin-bottom: -2rem;
     }
-    .blog-list-body{
+
+    .blog-list-body {
       display: flex;
       gap: 2.4rem;
     }
-    .blog-list-wrap{
-      width: 75%;
-    }
-    .banner-section{
-      margin-inline: unset;
+
+    .blog-list-wrap {
+      width: 100%;
     }
 
+    .banner-section {
+      margin-inline: unset;
+    }
+  }
+}
+.blog-loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin: 3rem auto 5rem;
+}
+.infinite-scroll-component {
+  overflow: unset !important;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.grid-all {
+  grid-column: 1 / -1;
+  width: 100%;
+  color: #191b1b;
+  margin-top: 2rem;
+  span {
+    color: #ff3d00;
+  }
+  p {
+    font-size: 2rem;
+    font-weight: 550;
+    text-align: center;
+    @include mq(md) {
+      font-size: 4rem;
+    }
+    & + span {
+      text-align: center;
+      display: block;
+      color: black;
+    }
   }
 }
