--- a/src/assets/scss/layout/_blog-detail-page.scss
+++ b/src/assets/scss/layout/_blog-detail-page.scss
@@ -228,6 +228,8 @@
   background-color: #f5f5f5;
   font-size: 1.4rem;
   border-radius: 2rem;
+  display: block;
+  text-align: center;
   @include mq(md) {
     margin-bottom: 4rem;
   }
