--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -3,7 +3,10 @@
 #root {
   overflow: hidden;
 }
-
+.not-found {
+  max-width: 500px;
+  margin: auto;
+}
 .container {
   max-width: var(--container);
   margin: auto;
