--- a/src/assets/scss/layout/_feature.scss
+++ b/src/assets/scss/layout/_feature.scss
@@ -170,6 +170,7 @@
     border-radius: 2px;
     padding: 40px 58px;
     position: relative;
+    border-radius: 20px;
 
     h3 {
       font-family: Gilroy-SemiBold;
