--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -44,7 +44,7 @@
       margin-bottom: 4rem;
     }
 
-    &:last-child {
+  &.footer-link-list-last {
       position: relative;
 
       &::before {
