--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -2,26 +2,28 @@
 
 .product-section {
   overflow: hidden;
-  background: radial-gradient(
-      110.73% 221.19% at -4.65% 0%,
+  background: radial-gradient(110.73% 221.19% at -4.65% 0%,
       #292d32 0%,
       #151519 30.5%,
-      #292d32 100%
-    )
-    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+      #292d32 100%)
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+  ;
   position: relative;
   isolation: isolate;
+
   video {
     min-height: 100%;
     width: 100%;
     scale: 1.1;
   }
+
   .vr-video {
     max-width: 80rem;
     padding-top: 2rem;
     position: relative;
     width: 100%;
     isolation: isolate;
+
     .line {
       pointer-events: none;
       top: 20%;
@@ -32,6 +34,7 @@
       position: fixed;
       border-radius: 50%;
       background-color: transparent;
+
       @include mq(md) {
         left: 50%;
         right: auto;
@@ -40,6 +43,7 @@
       }
     }
   }
+
   .video {
     width: 100%;
     mask-image: url("/img/vr-m.webp");
@@ -51,11 +55,13 @@
     align-items: center;
     overflow: hidden;
     position: relative;
+
     @include mq(md) {
       mask-image: url("/img/vr.webp");
       aspect-ratio: 811/278;
     }
   }
+
   .swiper {
     &-slide {
       height: 100vh;
@@ -87,12 +93,15 @@
         border: 0.1rem solid transparent;
         transition: 300ms;
         opacity: 0.5;
+
         &-active {
           opacity: 1;
+
           .icon {
             filter: grayscale(0);
           }
         }
+
         &:hover {
           border: 0.1rem solid var(--white);
           border-radius: 50%;
@@ -121,9 +130,11 @@
     // justify-content: center;
     height: 100%;
     gap: 2rem;
+
     @include mq(md) {
       gap: 0;
     }
+
     &::before {
       content: "";
       position: absolute;
@@ -158,6 +169,7 @@
       justify-content: center;
     }
   }
+
   .product-geo-verse {
     .section-sub-title {
       text-transform: uppercase;
@@ -190,6 +202,7 @@
 @include mq(lg) {
   .product-section {
     min-height: 70rem;
+
     .product-item {
       margin-inline: auto;
     }
@@ -197,6 +210,7 @@
     .product-content {
       width: 70%;
       margin-inline: auto;
+
       &.product-bio-verse::before {
         background: url("/img/product/item-bg/bio-verse-bg.webp") center/cover;
       }
