--- a/src/assets/scss/layout/_info.scss
+++ b/src/assets/scss/layout/_info.scss
@@ -91,6 +91,11 @@
       line-height: 1;
       display: flex;
       color: #000;
+      font-family: Gilroy-SemiBold;
+      font-size: 60px;
+      font-weight: 400;
+      line-height: 60px;
+      color: #000000;
 
       &::after {
         content: "+";
@@ -107,6 +112,11 @@
       letter-spacing: 0.7rem;
       margin-top: 0.5rem;
       color: #000;
+      font-family: Gilroy-Regular;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: 10px;
     }
   }
 
@@ -138,11 +148,21 @@
 @include mq(md) {
   .product-info-section {
     .section-title {
-      font-size: 6rem;
+      font-family: Gilroy-SemiBold;
+      font-size: 40px;
+      font-weight: 400;
+      line-height: 40px;
+      color: #292D32;
     }
 
     .section-sub-title {
       margin-inline: auto;
+      font-family: Gilroy-Regular;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 19.8px;
+      text-align: justify;
+      color: #292D32;
     }
 
     .card-list {
