--- a/src/assets/scss/layout/_modal.scss
+++ b/src/assets/scss/layout/_modal.scss
@@ -108,6 +108,7 @@
     position: absolute;
     top: 2rem;
     right: 2rem;
+    background: transparent;
   }
   .form-title {
     text-transform: uppercase;
