--- a/src/assets/scss/layout/_blog-page.scss
+++ b/src/assets/scss/layout/_blog-page.scss
@@ -66,9 +66,9 @@
       gap: 1.3rem;
       color: #292d32;
 
-      img {
-        filter: invert(1);
-      }
+      // img {
+      //   filter: invert(1);
+      // }
     }
 
     .dropdown-icon {
@@ -155,7 +155,7 @@
     margin-bottom: 1.5rem;
 
     @include mq(lg) {
-      font-size: 6rem;
+      font-size: 5rem;
     }
   }
 
