--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -34,6 +34,7 @@
       position: fixed;
       border-radius: 50%;
       background-color: transparent;
+      display: none;
 
       @include mq(md) {
         left: 50%;
@@ -67,6 +68,7 @@
       height: 100vh;
       min-height: 70rem;
       padding-top: 16rem;
+      background-color: #F6FBFF;
     }
 
     &-button-next,
@@ -189,9 +191,27 @@
   }
 
   .section-sub-title {
+    font-family: Gilroy-Regular;
+    font-size: 14px;
     font-weight: 400;
-    min-height: 6.8rem;
+    line-height: 16.8px;
+    color: #525252;
+    margin: 12px 0 30px;
   }
+
+  .section-title {
+    font-family: Gilroy-SemiBold;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+    color: #292D32;
+    margin: 30px 0 0;
+  }
+
+  // .section-sub-title {
+  //   font-weight: 400;
+  //   min-height: 6.8rem;
+  // }
 
   .product-item {
     height: 100%;
@@ -210,11 +230,20 @@
     .product-content {
       width: 70%;
       margin-inline: auto;
+      position: relative;
 
       &.product-bio-verse::before {
-        background: url("/img/product/item-bg/bio-verse-bg.webp") center/cover;
+        // background: url("/img/product/item-bg/bio-verse-bg.webp") center/cover;
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: url("/img/bioVerseEdge.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
       }
-
+      
       &.product-chem-verse::before {
         background: url("/img/product/item-bg/chem-verse-bg.webp") center/cover;
       }
